--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: rgb(162, 58, 58)
+    background-color: rgb(26, 0, 96)
 }
 
 .wrapper {
@@ -8,7 +8,30 @@ justify-content: center;
 }
 
 .wrapper_1 {
-    background-color: rgba(3, 32, 33, 0.936);
+    background-color: rgba(21, 165, 16, 0.32);
     width: 1100px;
     height: 800px;
+}
+.photo {
+    width: 200px;
+    border-radius: 40%;
+}
+.bio {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 40px;
+    gap: 20px;
+    border: 2px solid blanchedalmond;
+}
+.name {
+    font-size: 50px;
+    font-weight: bold;
+    font-family:'Courier New', Courier, monospace;
+    color:antiquewhite
+}
+.prof {
+    font-size: 20px;
+    color: antiquewhite;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
