--- a/style.css
+++ b/style.css
@@ -58,10 +58,11 @@ justify-content: center;
     margin-top: 30px;
 }
 code {
-    color: rgb(202, 161, 16);
+    color: rgba(1, 143, 244, 0.347);
     border: 2px solid wheat;
     margin:  5px 5px 5px 5px;
     padding: 5px 5px 5px 5px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 .education {
     display: flex;
@@ -75,4 +76,37 @@ code {
     justify-content: center;
     font-size: 20px;
     margin-top: 20px;
+}
+footer h2 {
+    margin-right: 70px;
+    font-size: 30px;
+}
+footer li {
+    font-size: 20px;
+}
+a {
+    color: blanchedalmond;
+}
+.footer {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+.logo {
+    background-color: rgb(255, 255, 255);
+    width: 1100px;
+    height: 195px;
+    display: flex;
+    justify-content: space-between;
+
+}
+.rsApp {
+    width: 400px;
+    height: 195px;
+}
+.est {
+    color: black;
+    font-weight: bold;
+    padding-top: 140px;
+    padding-right: 20px;
 }
